Add rejected status and department
