# static/swagger.json
@@ -83,6 +83,16 @@
                       "description": {
                         "type": "string"
                       },
+                      "department": {
+                        "type": "string",
+                        "enum": [
+                          "Department of Drinking Water and Sanitation",
+                          "Department of Rural Works",
+                          "Department of Road Construction",
+                          "Department of Energy",
+                          "Department of Health, Medical Education & Family Welfare"
+                        ]
+                      },
                       "count": {
                         "type": "integer"
                       },
@@ -126,7 +136,8 @@
                     "enum": [
                       "submitted",
                       "progress",
-                      "complete"
+                      "complete",
+                      "rejected"
                     ]
                   },
                   "report": {
@@ -255,6 +266,16 @@
                   "type": {
                     "type": "string"
                   },
+                  "department": {
+                    "type": "string",
+                    "enum": [
+                      "Department of Drinking Water and Sanitation",
+                      "Department of Rural Works",
+                      "Department of Road Construction",
+                      "Department of Energy",
+                      "Department of Health, Medical Education & Family Welfare"
+                    ]
+                  },
                   "lat": {
                     "type": "number"
                   },
@@ -315,6 +336,16 @@
                       },
                       "description": {
                         "type": "string"
+                      },
+                      "department": {
+                        "type": "string",
+                        "enum": [
+                          "Department of Drinking Water and Sanitation",
+                          "Department of Rural Works",
+                          "Department of Road Construction",
+                          "Department of Energy",
+                          "Department of Health, Medical Education & Family Welfare"
+                        ]
                       },
                       "count": {
                         "type": "integer"
